--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -26,7 +26,7 @@
 
     footer {
         align-self: stretch; //faz ocupar a largura toda
-        &.empty {
+        &.empty.progress {
             opacity: 0.5;
         }
     }
@@ -110,12 +110,21 @@ text-align: center;
 
         &:disabled{
             cursor: not-allowed;
+            opacity: 0.5;
         }
 
         &:hover:not(:disabled){
             filter: brightness(0.8);
         }
     
+
+        &.isActive{
+            filter: invert(0.35) sepia(1)  saturate(3) hue-rotate(100deg);
+        }
+
+        &.isActive:hover{
+            filter: brightness(0.6) invert(0.35) sepia(1)  saturate(3) hue-rotate(100deg);
+        }
         &.playButton {
             width: 4rem;
             height: 4rem;
